# playground

./: .gitattributes  .gitignore
hardware/tools/dupont/: AGENTS.md  pyproject.toml  render_layout.py  render_schematic.py
hardware/tools/dupont/breadboard/: __init__.py  geometry.py  parse.py  render.py
hardware/tools/dupont/breadboard/components/: __init__.py  button.py  buzzer.py  capacitor.py  crystal.py  inductor.py  potentiometer.py  resistor.py  seven_segment.py
hardware/tools/dupont/dupont/: __init__.py  cli.py  migrate.py
hardware/tools/dupont/dupont/canon/: ids.py  pins.py
hardware/tools/dupont/dupont/check/: __init__.py  connectivity.py  geometry.py  report.py
hardware/tools/dupont/dupont/formats/: __init__.py
hardware/tools/dupont/dupont/grid/: geometry.py  holes.py  scale.py
hardware/tools/dupont/dupont/model/: entities.py  serialize.py
hardware/tools/dupont/dupont/render/: __init__.py  breadboard.py  schematic.py
hardware/tools/dupont/dupont/topology/: nets.py
hardware/tools/dupont/tests/: conftest.py  test_breadboard_importer.py  test_canon.py  test_check_connectivity.py  test_check_geometry.py  test_cli.py  test_cli_check.py  test_cli_layout.py  test_exporter.py  test_grid_geometry.py  test_grid_holes.py  test_grid_scale.py  test_importer.py  test_migrate.py  test_migrate_layout.py  test_migrate_layout_parity.py  test_model.py  test_render_breadboard.py  test_render_entry.py  test_report.py  test_scaffold.py  test_schematic_parity.py  test_topology_nets.py  test_wokwi_exporter.py  test_wokwi_importer.py  test_wokwi_maps.py
(+304 files in other folders)
